2010-03-08  Janus Weil  <janus@gcc.gnu.org>

PR fortran/43256
	* resolve.c (resolve_compcall): Don't set 'value.function.name' here
	for TBPs, otherwise they will not be resolved properly.
	(resolve_function): Use 'value.function.esym' instead of
        'value.function.name' to check if we're dealing with a TBP.
	(check_class_members): Set correct type of passed object for all TBPs,
	not only generic ones, except if the type is abstract.


2010-03-08  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/43256
	* gfortran.dg/typebound_call_13.f03: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@157272 138bc75d-0d04-0410-961f-82ee72b054a4